[package]
name = "clocklib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
#embedded-hal-nb = "1.0.0-alpha.2"
heapless = "0.7.16"
bitvec = { version = "1.0.1", default-features = false }
is31fl3731-driver = { path = "../is31fl3731-driver" }

# [dev-dependencies]
[target.'cfg(target_arch = "x86")'.dev-dependencies]
ftdi-embedded-hal = { version = "0.16.0", features = ["libftd2xx-static"] }
libftd2xx = { version = "0.32", features = ['static'] }