[package]
name = "is31fl3731-driver"
version = "0.1.0"
edition = "2021"

authors = ["Andrzej Tokarski"]
categories = ["embedded", "no-std"]
description = "A driver for IS31FL3731"

[dependencies]
embedded-hal = "0.2.7"
heapless = "0.7.16"
bitvec = { version = "1.0.1", default-features = false }

[target.'cfg(target_arch = "x86")'.dev-dependencies]
# [dev-dependencies]
ftdi-embedded-hal = { version = "0.16.0", features = ["libftd2xx-static"] }
libftd2xx = { version = "0.32", features = ['static'] }
